testing/tests/ui/json-too-many-args.stderr
error: the previous template error derives from
 --> tests/ui/json-too-many-args.rs:6:34
  |
6 | #[template(ext = "txt", source = "{{ 1|json(2, 3) }}")]
  |                                  ^^^^^^^^^^^^^^^^^^^^
